added automated plotting after simulation ends

--- a/Dockerfile-CitySim-Solver
+++ b/Dockerfile-CitySim-Solver
@@ -45,5 +45,5 @@ WORKDIR /data
 COPY ./input_data/data.xml .
 COPY ./input_data/cli/UWYO.cli /data/input_data/cli/UWYO.cli
 
-# Set the default command to run your application and then copy output files
-CMD sh -c "CitySim *.xml | tee log.txt && mkdir -p /output_data && mv *.out /output_data/"
+# Set the default command to run your application and then copy output files and enable permissions
+CMD sh -c "CitySim *.xml | tee log.txt && mkdir -p /output_data && mv *.out /output_data && chmod -R 777 /output_data"
