--- a/Dockerfile-Plot
+++ b/Dockerfile-Plot
@@ -13,4 +13,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
 
 # Run main.py when the container launches
-CMD ["python", "main.py"]
+CMD ["python", "plot.py"]
