--- a/Dockerfile-Plot
+++ b/Dockerfile-Plot
@@ -6,11 +6,21 @@ WORKDIR /app
 # Copy the requirements file into the container at /app
 COPY requirements.txt .
 
+# Update and install necessary libraries
+RUN apt-get update && \
+  apt-get install -y \
+  gdal-bin \
+  libgdal-dev \
+  build-essential && \
+  rm -rf /var/lib/apt/lists/*
+
+ENV GDAL_CONFIG=/usr/bin/gdal-config
+
 # Install any needed packages specified in requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the rest of the working directory contents into the container at /app
 COPY . .
 
-# Run main.py when the container launches
+# Run plot.py when the container launches
 CMD ["python", "plot.py"]
